# pih-fastapi

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
src/: plot_home_20231102.ipynb  plot_office_20231102.ipynb
src/app/: main.py  settings.py  utils.py
src/app/routes/: __init__.py  client.py
src/data/: data_home.csv  data_office_20231102.csv
